fixed html not showing up

--- a/hotelapp/static/hotelapp/assets/css/joeblog.css
+++ b/hotelapp/static/hotelapp/assets/css/joeblog.css
@@ -38,6 +38,8 @@
   box-sizing: border-box;
 }
 
+
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
@@ -82,7 +84,7 @@ p {
 }
 
 abbr[title],
-abbr[data-original-title] {
+abbr[data-original-title] { 
   text-decoration: underline;
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
@@ -11641,6 +11643,16 @@ textarea.form-control {
           flex-direction: column;
 }
 
+ /* MY CODE INSERT */
+ .fixed-bg {
+  background-image: url(".assets/imgs/insta-4.jpg");
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .page-header.page-header-mini .title {
   color: #343a40;
   font-size: calc(38px + (50 - 48) * ((100vw - 320px) / (1200 - 320)));
@@ -11770,6 +11782,8 @@ section .section-secondary-title {
   margin-bottom: 15px;
 }
 
+
+
 .bg-image {
   /* Full height */
   height: 50%;
@@ -11781,27 +11795,31 @@ section .section-secondary-title {
 }
 
 /* Images used */
-.img1 { background-image: url(".faq_files/insta-1.jpg"); }
-.img2 { background-image: url(".faq_files/blog-2.jpg"); }
-.img3 { background-image: url(".faq_files/blog-2.jpg"); }
-.img4 { background-image: url(".faq_files/blog-2.jpg"); }
-.img5 { background-image: url(".faq_files/blog-2.jpg"); }
-.img6 { background-image: url(".faq_files/blog-2.jpg"); }
+.img1 { background-image: url(".hotelapp/assets/imgs/blog-1.jpg"); }
+.img2 { background-image: url(".hotelapp/assets/imgs/blog-2.jpg"); }
+.img3 { background-image: url(".hotelapp/assets/imgs/blog-3.jpg"); }
+.img4 { background-image: url(".hotelapp/assets/imgs/blog-4.jpg"); }
+.img5 { background-image: url(".hotelapp/assets/imgs/blog-5.jpg"); }
+.img6 { background-image: url(".hotelapp/assets/imgs/blog-6.jpg"); }
 
 /* Position text in the middle of the page/image */
 .bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  font-size: 80px;
+  /* color: white; */
+  /* font-weight: bold; */
+  /* font-size: 80px; */
   border: 10px solid #f1f1f1;
   position: fixed; /* Stay fixed */
   top: 50%;
-  left: 50%;
+  left: 25%;
   transform: translate(-50%, -50%);
-  z-index: 2;
+  /* z-index: 2; */
   width: 300px;
   padding: 20px;
   text-align: center;
+  color: #343a40;
+  font-size: calc(38px + (50 - 48) * ((100vw - 320px) / (1200 - 320)));
+  z-index: 10;
+  font-weight: bold;
 }
